--- a/src/cn/framework/components/Toolbar.mxml
+++ b/src/cn/framework/components/Toolbar.mxml
@@ -765,8 +765,7 @@
 	</fx:Script>
 	<s:HGroup width="100%" height="100%" gap="0">
 		<s:Image source="assets/main/toolbar_bg_left.png"/>
-		<mx:Canvas backgroundSize="100%" width="100%" height="100%" backgroundImage="assets/main/toolbar_bg_center.png">
-		</mx:Canvas>
+		<s:Image source="assets/main/toolbar_bg_center.png" width="100%" fillMode="repeat"/>
 		<s:Image source="assets/main/toolbar_bg_right.png"/>
 	</s:HGroup>
 	<s:HGroup gap="3" width="100%" horizontalAlign="center">
