--- a/src/cn/framework/components/XCRepeater.mxml
+++ b/src/cn/framework/components/XCRepeater.mxml
@@ -93,7 +93,7 @@
 			
 			protected function CarInfo_clickHandler(event:MouseEvent):void
 			{
-				var xcwindow:XCWindow = PopUpManager.createPopUp(this.parentApplication.parent,XCWindow,true) as XCWindow;
+				var xcwindow:XCWindow = PopUpManager.createPopUp(this.parentApplication.parent,XCWindow,true,null,this.moduleFactory) as XCWindow;
 				PopUpManager.centerPopUp(xcwindow);
 				xcwindow.infoData = _infoData.attributes;
 			}
